# AgenticAI-LiteratureReview-AutoQueryOptimisation

./: .env.example  .gitignore  README.md  README_PROJECT_CREATION.md  main.py  pyproject.toml
config/: settings.yaml
config/projects/: 01_attempts.yaml  02_methods.yaml  03_assessments.yaml  04_reviews.yaml
src/adapters/databases/: openalex_adapter.py  scopus_adapter.py  wos_adapter.py
src/adapters/llms/: gemini_adapter.py
src/core/: config.py  models.py
